Add documentation for Generate_Ground_Truth.ipynb
Signed-off-by: Lem <lemhui.inbox@gmail.com>

--- a/notebooks/Generate_Ground_Truth.ipynb
+++ b/notebooks/Generate_Ground_Truth.ipynb
@@ -1,12 +1,88 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# Generate Ground Truth with seqFISH+ Data\n",
+    "\n",
+    "## Data Importation and Preparation\n",
+    "- **Data Source**: Import datasets from the seqFISH-PLUS GitHub repository containing detailed cell annotations and \n",
+    "gene \n",
+    "expression data from high-resolution seqFISH+ experiments on the mouse brain.\n",
+    "- **Preparation**: Extract and categorise cells based on type and spatial location. Each cell type's gene expression \n",
+    "profile should be catalogued from the high-resolution datasets for reference.\n",
+    "## Simulating Low-Resolution Data\n",
+    "- **Grouping Strategy**: Aggregate cells into larger spatial units (\"spots\") to simulate lower-resolution imaging. This \n",
+    "involves programmatically combining cells from different types in defined spatial areas, maintaining an accurate count of each cell type per spot.\n",
+    "- **Ground Truth Establishment**: Record the exact ratios and types of cells grouped into each spot. This provides the \n",
+    "ground truth data against which the performance of deconvolution algorithms can be evaluated.\n",
+    "## Objective of Low-Resolution Simulation\n",
+    "- **Benchmarking Tool**: The primary goal is to use this simulated low-resolution data to test and compare the efficacy of\n",
+    " various cellular deconvolution tools. These tools are designed to estimate the composition of cell types within mixed samples, a common challenge in low-resolution datasets.\n",
+    "- **Validation and Comparison**: By comparing the deconvolution outputs against the known ground truth (cell ratios per \n",
+    "spot), researchers can assess the accuracy of each tool.\n",
+    "\n",
+    "## Output Data\n",
+    "\n",
+    "### cortex_svz_counts.csv File Structure\n",
+    "This CSV file presents a comprehensive dataset of gene expression levels measured across individual cells. Here is an \n",
+    "outline of the file's dimensions and content:\n",
+    "- **Rows**: Each row in the file represents a single cell. The total number of rows indicates the number of cells \n",
+    "analysed in the dataset.\n",
+    "- **Columns**: Each column corresponds to a different gene. The values indicate the count of gene expressions within \n",
+    "each cell.\n",
+    "\n",
+    "### cell_data.csv File Structure\n",
+    "This CSV file contains detailed records for individual cells. Here is an outline of the file's dimensions and content:\n",
+    "- **Rows**: Each row in the file represents a single cell. The total number of rows indicates the number of cells \n",
+    "analysed in the dataset.\n",
+    "- **Columns**: Each column provides specific data about the cells. These include spatial coordinates, bin information, identifiers, and cell classifications.\n",
+    "\n",
+    "#### Columns Description:\n",
+    "- **field_of_view**: Identifies the specific area of the sample that was captured and imaged.\n",
+    "- **cell_id**: A unique integer identifier for each cell within its respective field_of_view. This ID is local and unique only within the same field_of_view.\n",
+    "- **x**: The X coordinate represents the exact horizontal position of the cell within the field of view.\n",
+    "- **y**: The Y coordinate represents the exact vertical position of the cell within the field of view.\n",
+    "- **x_bin**: The bin number on the x-axis where the cell is located.\n",
+    "- **y_bin**: The bin number on the y-axis where the cell is located.\n",
+    "- **bin_id**: An identifier for the bin within the same field of view.\n",
+    "- **mid_point_x**: The midpoint X coordinate of the bin.\n",
+    "- **mid_point_y**: The midpoint Y coordinate of the bin.\n",
+    "- **global_bin_id**: A unique identifier for the bin across all fields of view.\n",
+    "- **louvain**: A cluster identifier.\n",
+    "- **cell_type**: Specifies the exact type of cell.\n",
+    "- **benchmark_label**: A broader category label aggregating similar cell_types into unified groups for benchmarking.\n",
+    "\n",
+    "### cell_ratios.csv File Structure\n",
+    "The CSV file contains tabulated data representing the composition of different cell types within specific bins across\n",
+    " a sample. Each row in the data represents a bin, and each column details the ratio of a specific cell type within \n",
+    " that bin.\n",
+    "#### Columns Description:\n",
+    "- **global_bin_id**: A unique identifier for each bin.\n",
+    "- **astrocyte**: Represents the ratio of astrocytes within the bin.\n",
+    "- **endo**: Represents the ratio of endothelial cells within the bin.\n",
+    "- **eneuron**: Represents the ratio of excitatory neurons within the bin.\n",
+    "- **ineuron**: Represents the ratio of interneurons within the bin.\n",
+    "- **microglia**: Represents the ratio of microglial cells within the bin.\n",
+    "- **olig**: Represents the ratio of oligodendrocytes within the bin.\n",
+    "\n",
+    "### gene_expressions.csv File Structure\n",
+    "This CSV file is formatted as a matrix where each row corresponds to a specific bin, and each column represents a \n",
+    "different gene. The values in the matrix indicate the count of gene expressions within each bin.\n",
+    "- **Rows**: Each row in the file represents a specific bin. The total number of rows indicates the number of bins \n",
+    "generated.\n",
+    "- **Columns**: Each column corresponds to a different gene.\n"
+   ],
+   "id": "3f66665a0d838945"
+  },
+  {
    "cell_type": "code",
    "id": "ef703eb1976ad882",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-25T12:39:27.805521Z",
-     "start_time": "2024-11-25T12:39:25.350037Z"
+     "end_time": "2024-11-26T02:38:49.891854Z",
+     "start_time": "2024-11-26T02:38:46.799719Z"
     }
    },
    "source": [
@@ -19,22 +95,22 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: pandas in c:\\users\\lem\\anaconda3\\envs\\spatial-deconv\\lib\\site-packages (1.3.5)\n",
-      "Requirement already satisfied: pytz>=2017.3 in c:\\users\\lem\\anaconda3\\envs\\spatial-deconv\\lib\\site-packages (from pandas) (2022.7)\n",
       "Requirement already satisfied: numpy>=1.17.3 in c:\\users\\lem\\anaconda3\\envs\\spatial-deconv\\lib\\site-packages (from pandas) (1.21.6)\n",
       "Requirement already satisfied: python-dateutil>=2.7.3 in c:\\users\\lem\\anaconda3\\envs\\spatial-deconv\\lib\\site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2017.3 in c:\\users\\lem\\anaconda3\\envs\\spatial-deconv\\lib\\site-packages (from pandas) (2022.7)\n",
       "Requirement already satisfied: six>=1.5 in c:\\users\\lem\\anaconda3\\envs\\spatial-deconv\\lib\\site-packages (from python-dateutil>=2.7.3->pandas) (1.16.0)\n",
       "Requirement already satisfied: openpyxl in c:\\users\\lem\\anaconda3\\envs\\spatial-deconv\\lib\\site-packages (3.1.3)\n",
       "Requirement already satisfied: et-xmlfile in c:\\users\\lem\\anaconda3\\envs\\spatial-deconv\\lib\\site-packages (from openpyxl) (1.1.0)\n"
      ]
     }
    ],
-   "execution_count": 1
+   "execution_count": 39
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-25T12:39:33.093248Z",
-     "start_time": "2024-11-25T12:39:33.070541Z"
+     "end_time": "2024-11-26T02:38:49.907653Z",
+     "start_time": "2024-11-26T02:38:49.891854Z"
     }
    },
    "cell_type": "code",
@@ -59,13 +135,13 @@
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 40
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-25T12:39:37.786186Z",
-     "start_time": "2024-11-25T12:39:35.729930Z"
+     "end_time": "2024-11-26T02:38:51.277895Z",
+     "start_time": "2024-11-26T02:38:49.907653Z"
     }
    },
    "cell_type": "code",
@@ -73,20 +149,21 @@
     "import pandas as pd\n",
     "\n",
     "# Load the data\n",
-    "cortex_svz_annot = pd.read_csv('../data/input/cortex_svz_cell_type_annotations.csv')\n",
-    "cortex_svz_coords = pd.read_csv('../data/input/cortex_svz_cellcentroids.csv')\n",
-    "cortex_svz_counts = pd.read_csv('../data/input/cortex_svz_counts.csv')\n",
-    "cortex_svz_types = pd.read_excel('../data/input/41586_2019_1049_MOESM3_ESM.xlsx')"
+    "seqFish_dir = '../data/seqFISH+/'\n",
+    "cortex_svz_annot = pd.read_csv(f'{seqFish_dir}input/cortex_svz_cell_type_annotations.csv')\n",
+    "cortex_svz_coords = pd.read_csv(f'{seqFish_dir}input/cortex_svz_cellcentroids.csv')\n",
+    "cortex_svz_counts = pd.read_csv(f'{seqFish_dir}input/cortex_svz_counts.csv')\n",
+    "cortex_svz_types = pd.read_excel(f'{seqFish_dir}input/41586_2019_1049_MOESM3_ESM.xlsx')"
    ],
    "id": "13eb20cc235a0600",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 41
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-25T12:39:38.813879Z",
-     "start_time": "2024-11-25T12:39:38.790456Z"
+     "end_time": "2024-11-26T02:38:51.293722Z",
+     "start_time": "2024-11-26T02:38:51.279912Z"
     }
    },
    "cell_type": "code",
@@ -107,7 +184,7 @@
    ],
    "id": "8450475500c52e73",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 42
   },
   {
    "cell_type": "code",
@@ -115,8 +192,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-11-25T12:39:47.672178Z",
-     "start_time": "2024-11-25T12:39:47.656423Z"
+     "end_time": "2024-11-26T02:38:51.309926Z",
+     "start_time": "2024-11-26T02:38:51.293722Z"
     }
    },
    "source": [
@@ -136,15 +213,15 @@
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 43
   },
   {
    "cell_type": "code",
    "id": "6e1c59303fc29c65",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-25T12:39:50.526227Z",
-     "start_time": "2024-11-25T12:39:50.512028Z"
+     "end_time": "2024-11-26T02:38:51.325442Z",
+     "start_time": "2024-11-26T02:38:51.309926Z"
     }
    },
    "source": [
@@ -154,13 +231,13 @@
     "cortex_svz_annot['cell_type'] = cortex_svz_annot['louvain'].map(label_map)"
    ],
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 44
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-25T12:39:52.067036Z",
-     "start_time": "2024-11-25T12:39:52.049681Z"
+     "end_time": "2024-11-26T02:38:51.340779Z",
+     "start_time": "2024-11-26T02:38:51.327526Z"
     }
    },
    "cell_type": "code",
@@ -282,20 +359,20 @@
        "</div>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 8
+   "execution_count": 45
   },
   {
    "cell_type": "code",
    "id": "31fc6c1472b540fb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-25T13:03:02.010208Z",
-     "start_time": "2024-11-25T13:03:01.978323Z"
+     "end_time": "2024-11-26T02:38:51.403878Z",
+     "start_time": "2024-11-26T02:38:51.342481Z"
     }
    },
    "source": [
@@ -531,20 +608,20 @@
        "</div>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 29
+   "execution_count": 46
   },
   {
    "cell_type": "code",
    "id": "5c3e2a99c412f4dd",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-25T13:03:02.544557Z",
-     "start_time": "2024-11-25T13:03:02.534540Z"
+     "end_time": "2024-11-26T02:38:51.419936Z",
+     "start_time": "2024-11-26T02:38:51.403878Z"
     }
    },
    "source": [
@@ -577,15 +654,15 @@
      ]
     }
    ],
-   "execution_count": 30
+   "execution_count": 47
   },
   {
    "cell_type": "code",
    "id": "f03aec51e7d68859",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-25T13:03:03.000201Z",
-     "start_time": "2024-11-25T13:03:02.954600Z"
+     "end_time": "2024-11-26T02:38:51.467089Z",
+     "start_time": "2024-11-26T02:38:51.419936Z"
     }
    },
    "source": [
@@ -688,15 +765,15 @@
      ]
     }
    ],
-   "execution_count": 31
+   "execution_count": 48
   },
   {
    "cell_type": "code",
    "id": "15a61585ac811399",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-25T13:03:03.215995Z",
-     "start_time": "2024-11-25T13:03:03.164479Z"
+     "end_time": "2024-11-26T02:38:51.512875Z",
+     "start_time": "2024-11-26T02:38:51.468096Z"
     }
    },
    "source": [
@@ -888,18 +965,18 @@
        "</div>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 32
+   "execution_count": 49
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-25T13:03:05.724511Z",
-     "start_time": "2024-11-25T13:03:03.374285Z"
+     "end_time": "2024-11-26T02:38:53.870690Z",
+     "start_time": "2024-11-26T02:38:51.514930Z"
     }
    },
    "cell_type": "code",
@@ -963,15 +1040,15 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 33
+   "execution_count": 50
   },
   {
    "cell_type": "code",
    "id": "ac098e4ff6c09eb8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-25T13:03:49.448974Z",
-     "start_time": "2024-11-25T13:03:48.293954Z"
+     "end_time": "2024-11-26T02:38:54.990682Z",
+     "start_time": "2024-11-26T02:38:53.870690Z"
     }
    },
    "source": [
@@ -1016,15 +1093,15 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 35
+   "execution_count": 51
   },
   {
    "cell_type": "code",
    "id": "43ebbf3bd6050eb5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-25T13:04:09.567147Z",
-     "start_time": "2024-11-25T13:04:08.619350Z"
+     "end_time": "2024-11-26T02:38:55.828733Z",
+     "start_time": "2024-11-26T02:38:54.990682Z"
     }
    },
    "source": [
@@ -1046,13 +1123,13 @@
      ]
     }
    ],
-   "execution_count": 36
+   "execution_count": 52
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-25T13:04:10.837836Z",
-     "start_time": "2024-11-25T13:04:10.819264Z"
+     "end_time": "2024-11-26T02:38:55.844579Z",
+     "start_time": "2024-11-26T02:38:55.829827Z"
     }
    },
    "cell_type": "code",
@@ -1065,40 +1142,45 @@
    ],
    "id": "682951d8a15a3da",
    "outputs": [],
-   "execution_count": 37
+   "execution_count": 53
   },
   {
    "cell_type": "code",
    "id": "7e01877e3e6f419c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-25T13:04:16.909728Z",
-     "start_time": "2024-11-25T13:04:15.694428Z"
+     "end_time": "2024-11-26T02:38:57.116736Z",
+     "start_time": "2024-11-26T02:38:55.844579Z"
     }
    },
    "source": [
-    "# Export the gene_expressions DataFrame to a CSV file\n",
-    "gene_expressions.to_csv('../data/output/gene_expressions.csv', index=True, header=True)\n",
+    "# Export the gene_expressions to a CSV file\n",
+    "gene_expressions.to_csv(f'{seqFish_dir}output/gene_expressions.csv', index=True, header=True)\n",
     "\n",
     "# Export the cell_data to a CSV file\n",
-    "cell_data.to_csv('../data/output/cell_data.csv', index=False, header=True)\n",
+    "cell_data.to_csv(f'{seqFish_dir}output/cell_data.csv', index=False, header=True)\n",
     "\n",
     "# Export the cell_ratios to a CSV file\n",
-    "cell_ratios.to_csv('../data/output/cell_ratios.csv', index=True, header=True)\n",
+    "cell_ratios.to_csv(f'{seqFish_dir}output/cell_ratios.csv', index=True, header=True)\n",
     "\n",
     "# Export the cortex_svz_counts to a CSV file\n",
-    "cortex_svz_counts.to_csv('../data/output/cortex_svz_counts.csv', index=False, header=True)"
+    "cortex_svz_counts.to_csv(f'{seqFish_dir}output/cortex_svz_counts.csv', index=False, header=True)"
    ],
    "outputs": [],
-   "execution_count": 38
+   "execution_count": 54
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-26T02:38:57.132728Z",
+     "start_time": "2024-11-26T02:38:57.118243Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "b002a52be67e2992"
+   "id": "b002a52be67e2992",
+   "outputs": [],
+   "execution_count": 54
   }
  ],
  "metadata": {
