--- a/notebooks/Generate_Ground_Truth.ipynb
+++ b/notebooks/Generate_Ground_Truth.ipynb
@@ -149,11 +149,11 @@
     "import pandas as pd\n",
     "\n",
     "# Load the data\n",
-    "seqFish_dir = '../data/seqFISH+/'\n",
-    "cortex_svz_annot = pd.read_csv(f'{seqFish_dir}input/cortex_svz_cell_type_annotations.csv')\n",
-    "cortex_svz_coords = pd.read_csv(f'{seqFish_dir}input/cortex_svz_cellcentroids.csv')\n",
-    "cortex_svz_counts = pd.read_csv(f'{seqFish_dir}input/cortex_svz_counts.csv')\n",
-    "cortex_svz_types = pd.read_excel(f'{seqFish_dir}input/41586_2019_1049_MOESM3_ESM.xlsx')"
+    "seqFish_dir = '../data/seqFISH+'\n",
+    "cortex_svz_annot = pd.read_csv(f'{seqFish_dir}/input/cortex_svz_cell_type_annotations.csv')\n",
+    "cortex_svz_coords = pd.read_csv(f'{seqFish_dir}/input/cortex_svz_cellcentroids.csv')\n",
+    "cortex_svz_counts = pd.read_csv(f'{seqFish_dir}/input/cortex_svz_counts.csv')\n",
+    "cortex_svz_types = pd.read_excel(f'{seqFish_dir}/input/41586_2019_1049_MOESM3_ESM.xlsx')"
    ],
    "id": "13eb20cc235a0600",
    "outputs": [],
@@ -1155,16 +1155,16 @@
    },
    "source": [
     "# Export the gene_expressions to a CSV file\n",
-    "gene_expressions.to_csv(f'{seqFish_dir}output/gene_expressions.csv', index=True, header=True)\n",
+    "gene_expressions.to_csv(f'{seqFish_dir}/output/gene_expressions.csv', index=True, header=True)\n",
     "\n",
     "# Export the cell_data to a CSV file\n",
-    "cell_data.to_csv(f'{seqFish_dir}output/cell_data.csv', index=False, header=True)\n",
+    "cell_data.to_csv(f'{seqFish_dir}/output/cell_data.csv', index=False, header=True)\n",
     "\n",
     "# Export the cell_ratios to a CSV file\n",
-    "cell_ratios.to_csv(f'{seqFish_dir}output/cell_ratios.csv', index=True, header=True)\n",
+    "cell_ratios.to_csv(f'{seqFish_dir}/output/cell_ratios.csv', index=True, header=True)\n",
     "\n",
     "# Export the cortex_svz_counts to a CSV file\n",
-    "cortex_svz_counts.to_csv(f'{seqFish_dir}output/cortex_svz_counts.csv', index=False, header=True)"
+    "cortex_svz_counts.to_csv(f'{seqFish_dir}/output/cortex_svz_counts.csv', index=False, header=True)"
    ],
    "outputs": [],
    "execution_count": 54
