Change directory name
Signed-off-by: Lem <lemhui.inbox@gmail.com>

--- a/notebooks/Generate_Ground_Truth.ipynb
+++ b/notebooks/Generate_Ground_Truth.ipynb
@@ -152,7 +152,7 @@
     "import pandas as pd\n",
     "\n",
     "# Load the data\n",
-    "seqFish_dir = '../data/seqFISH+'\n",
+    "seqFish_dir = '../data/seqFISH'\n",
     "cortex_svz_annot = pd.read_csv(f'{seqFish_dir}/input/cortex_svz_cell_type_annotations.csv')\n",
     "cortex_svz_coords = pd.read_csv(f'{seqFish_dir}/input/cortex_svz_cellcentroids.csv')\n",
     "sc_counts = pd.read_csv(f'{seqFish_dir}/input/cortex_svz_counts.csv')\n",
