--- a/notebooks/Tangram.ipynb
+++ b/notebooks/Tangram.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "code",
    "source": [
     "# Define the directories\n",
-    "seqfish_dir = '../data/seqFISH+'\n",
+    "seqfish_dir = '../data/seqFISH'\n",
     "visium_dir = '../data/Visium'\n",
     "data_dir = '../data/methods/Tangram'\n",
     "results_dir = '../results'"
