Update title and credit
Signed-off-by: Lem <lemhui.inbox@gmail.com>

--- a/notebooks/seqFISH.ipynb
+++ b/notebooks/seqFISH.ipynb
@@ -4,7 +4,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "# Generate Ground Truth with seqFISH+ Data\n",
+    "# Prepare seqFISH+ Data for Benchmarking\n",
     "\n",
     "## Data Importation and Preparation\n",
     "\n",
@@ -44,7 +44,7 @@
     "- **Rows**: Each row in the file represents a single cell. The total number of rows indicates the number of cells analysed in the dataset.\n",
     "- **Columns**: The first column is reserved for cell_ids, and the subsequent columns represent individual genes:\n",
     "  - **cell_id**: This column contains unique identifiers for each cell.\n",
-    "  - **Gene columns**: There are 1000 gene columns following the cell_id column. Each column is named after a gene and\n",
+    "  - **Gene columns**: There are 10000 gene columns following the cell_id column. Each column is named after a gene and\n",
     "   contains numeric values representing the count of transcripts observed for that cell.\n",
     "\n",
     "\n",
@@ -75,7 +75,8 @@
     "- **Rows**: Each row corresponds to a unique bin, which represents a distinct spot on the spatial array. The total number of rows indicates the number of bins, with each row providing the gene expression profile for that specific location.\n",
     "- **Columns**: The first column is reserved for bin_ids, and the subsequent columns represent individual genes:\n",
     "  - **bin_id**: This column contains the unique identifiers for each spatial location.\n",
-    "  - **Gene columns**: There are 1000 gene columns following the bin_id column. Each column is named after a gene and contains numeric values representing the count of transcripts observed for that gene at the corresponding bin location."
+    "  - **Gene columns**: There are 10000 gene columns following the bin_id column. Each column is named after a gene and\n",
+    "   contains numeric values representing the count of transcripts observed for that gene at the corresponding bin location."
    ],
    "id": "3f66665a0d838945"
   },
