Update Visium scripts
Signed-off-by: Lem <lemhui.inbox@gmail.com>

--- a/notebooks/Tangram.ipynb
+++ b/notebooks/Tangram.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-27T04:12:23.772303Z",
-     "start_time": "2024-11-27T04:12:23.756482Z"
+     "end_time": "2024-11-27T04:38:25.232401Z",
+     "start_time": "2024-11-27T04:38:25.202208Z"
     }
    },
    "cell_type": "code",
@@ -22,7 +22,7 @@
    ],
    "id": "1470412db1111551",
    "outputs": [],
-   "execution_count": 29
+   "execution_count": 33
   },
   {
    "metadata": {},
@@ -33,8 +33,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-27T04:12:26.801480Z",
-     "start_time": "2024-11-27T04:12:23.785282Z"
+     "end_time": "2024-11-27T04:38:27.306080Z",
+     "start_time": "2024-11-27T04:38:25.232401Z"
     }
    },
    "cell_type": "code",
@@ -53,7 +53,6 @@
     "print(f\"Single-cell labels: {sc_labels.shape}\")\n",
     "print(f\"Spatial counts: {st_counts.shape}\")\n",
     "print(f\"Spatial coordinates: {st_coords.shape}\")\n",
-    "print(st_counts.dtypes)\n",
     "\n",
     "# Set 'cell_id' as the primary identifier for the single-cell counts data\n",
     "sc_counts = sc_counts.set_index('cell_id')\n",
@@ -111,23 +110,11 @@
       "Single-cell counts: (576, 10001)\n",
       "Single-cell labels: (576, 2)\n",
       "Spatial counts: (94, 10001)\n",
-      "Spatial coordinates: (94, 3)\n",
-      "bin_id           int64\n",
-      "1700022a21rik    int64\n",
-      "1700025g04rik    int64\n",
-      "4933401b06rik    int64\n",
-      "5830417i10rik    int64\n",
-      "                 ...  \n",
-      "pde6b            int64\n",
-      "zp1              int64\n",
-      "dlx4             int64\n",
-      "opn1sw           int64\n",
-      "pramef12         int64\n",
-      "Length: 10001, dtype: object\n"
+      "Spatial coordinates: (94, 3)\n"
      ]
     }
    ],
-   "execution_count": 30
+   "execution_count": 34
   },
   {
    "metadata": {},
@@ -138,8 +125,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-27T04:13:02.758782Z",
-     "start_time": "2024-11-27T04:12:26.801480Z"
+     "end_time": "2024-11-27T04:39:18.986010Z",
+     "start_time": "2024-11-27T04:38:27.306080Z"
     }
    },
    "cell_type": "code",
@@ -223,7 +210,7 @@
      ]
     }
    ],
-   "execution_count": 31
+   "execution_count": 35
   },
   {
    "metadata": {},
@@ -234,8 +221,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-27T04:16:03.808684Z",
-     "start_time": "2024-11-27T04:13:02.758782Z"
+     "end_time": "2024-11-27T04:42:22.213573Z",
+     "start_time": "2024-11-27T04:39:19.015555Z"
     }
    },
    "cell_type": "code",
@@ -330,8 +317,7 @@
       "INFO:root:uniform based density prior is calculated and saved in `obs``uniform_density` of the spatial Anndata.\n",
       "INFO:root:rna count based density prior is calculated and saved in `obs``rna_count_based_density` of the spatial Anndata.\n",
       "INFO:root:Allocate tensors for mapping.\n",
-      "INFO:root:Begin training with 1118 genes and rna_count_based density_prior in clusters mode...\n",
-      "INFO:root:Printing scores every 100 epochs.\n"
+      "INFO:root:Begin training with 1118 genes and rna_count_based density_prior in clusters mode...\n"
      ]
     },
     {
@@ -349,13 +335,26 @@
       "6  slc9a3r1  apcdd1     gnaz    rcan2      ctsd       gsn\n",
       "7    acsbg1   cldn5    prrt3    kcnc1     itgam       mog\n",
       "8     ttyh1   igf1r    stx1a   slc6a1      bin2  arhgef10\n",
-      "9   slc27a1   ltbp4    mmp17  zfp385a    coro1a     abca2\n",
-      "Score: 0.610, KL reg: 0.464\n",
-      "Score: 0.894, KL reg: 0.000\n",
+      "9   slc27a1   ltbp4    mmp17  zfp385a    coro1a     abca2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:Printing scores every 100 epochs.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score: 0.582, KL reg: 0.527\n",
+      "Score: 0.894, KL reg: 0.001\n",
       "Score: 0.896, KL reg: 0.000\n",
       "Score: 0.896, KL reg: 0.000\n",
       "Score: 0.896, KL reg: 0.000\n",
-      "Score: 0.897, KL reg: 0.000\n",
+      "Score: 0.896, KL reg: 0.000\n",
       "Score: 0.897, KL reg: 0.000\n",
       "Score: 0.897, KL reg: 0.000\n",
       "Score: 0.897, KL reg: 0.000\n",
@@ -374,7 +373,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Execution time: 3.75 seconds\n",
+      "Execution time: 5.07 seconds\n",
       "\n",
       "Results for Visium data:\n",
       "WARNING: Default of the method has been changed to 't-test' from 't-test_overestim_var'\n",
@@ -447,7 +446,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score: 0.440, KL reg: 0.196\n",
+      "Score: 0.443, KL reg: 0.188\n",
       "Score: 0.605, KL reg: 0.000\n",
       "Score: 0.606, KL reg: 0.000\n",
       "Score: 0.607, KL reg: 0.000\n",
@@ -471,24 +470,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Execution time: 177.28 seconds\n"
+      "Execution time: 178.08 seconds\n"
      ]
     }
    ],
-   "execution_count": 32
+   "execution_count": 36
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-27T04:16:03.824840Z",
-     "start_time": "2024-11-27T04:16:03.811197Z"
+     "end_time": "2024-11-27T04:42:22.229447Z",
+     "start_time": "2024-11-27T04:42:22.213573Z"
     }
    },
    "cell_type": "code",
    "source": "",
    "id": "57b2f6fd8c2e5ba2",
    "outputs": [],
-   "execution_count": 32
+   "execution_count": 36
   }
  ],
  "metadata": {
