Add Tangram results

--- a/scripts/DataTools/seqFISH.ipynb
+++ b/scripts/DataTools/seqFISH.ipynb
@@ -83,8 +83,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-27T09:52:43.331795Z",
-     "start_time": "2024-11-27T09:52:43.317795Z"
+     "end_time": "2024-11-27T10:32:29.978076Z",
+     "start_time": "2024-11-27T10:32:29.956062Z"
     }
    },
    "cell_type": "code",
@@ -109,13 +109,13 @@
      ]
     }
    ],
-   "execution_count": 95
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-27T09:52:43.379323Z",
-     "start_time": "2024-11-27T09:52:43.361307Z"
+     "end_time": "2024-11-27T10:32:29.993110Z",
+     "start_time": "2024-11-27T10:32:29.980062Z"
     }
    },
    "cell_type": "code",
@@ -155,13 +155,13 @@
      ]
     }
    ],
-   "execution_count": 96
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-27T09:52:44.313463Z",
-     "start_time": "2024-11-27T09:52:43.381306Z"
+     "end_time": "2024-11-27T10:32:31.616896Z",
+     "start_time": "2024-11-27T10:32:29.994062Z"
     }
    },
    "cell_type": "code",
@@ -177,13 +177,13 @@
    ],
    "id": "13eb20cc235a0600",
    "outputs": [],
-   "execution_count": 97
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-27T09:52:44.329568Z",
-     "start_time": "2024-11-27T09:52:44.314652Z"
+     "end_time": "2024-11-27T10:32:31.631798Z",
+     "start_time": "2024-11-27T10:32:31.617783Z"
     }
    },
    "cell_type": "code",
@@ -205,7 +205,7 @@
    ],
    "id": "8450475500c52e73",
    "outputs": [],
-   "execution_count": 98
+   "execution_count": 4
   },
   {
    "cell_type": "code",
@@ -213,8 +213,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-11-27T09:52:44.345203Z",
-     "start_time": "2024-11-27T09:52:44.330568Z"
+     "end_time": "2024-11-27T10:32:31.647798Z",
+     "start_time": "2024-11-27T10:32:31.633797Z"
     }
    },
    "source": [
@@ -234,13 +234,13 @@
      ]
     }
    ],
-   "execution_count": 99
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-27T09:52:44.424659Z",
-     "start_time": "2024-11-27T09:52:44.346076Z"
+     "end_time": "2024-11-27T10:32:31.725058Z",
+     "start_time": "2024-11-27T10:32:31.648798Z"
     }
    },
    "cell_type": "code",
@@ -252,13 +252,13 @@
    ],
    "id": "23e72b5495f30da3",
    "outputs": [],
-   "execution_count": 100
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-27T09:52:44.440034Z",
-     "start_time": "2024-11-27T09:52:44.425775Z"
+     "end_time": "2024-11-27T10:32:31.740952Z",
+     "start_time": "2024-11-27T10:32:31.725936Z"
     }
    },
    "cell_type": "code",
@@ -271,13 +271,13 @@
    ],
    "id": "9575c56e774a9382",
    "outputs": [],
-   "execution_count": 101
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-27T09:53:00.947097Z",
-     "start_time": "2024-11-27T09:53:00.933094Z"
+     "end_time": "2024-11-27T10:32:31.756936Z",
+     "start_time": "2024-11-27T10:32:31.741935Z"
     }
    },
    "cell_type": "code",
@@ -287,12 +287,12 @@
     {
      "data": {
       "text/plain": [
-       "   index  louvain            cell_type benchmark_label\n",
-       "0      0       13   Excitatory layer 3         eneuron\n",
-       "1      1        3  Excitatory layer II         eneuron\n",
-       "2      2        3  Excitatory layer II         eneuron\n",
-       "3      3        7          Interneuron        ineuron \n",
-       "4      4        6   Excitatory layer 4         eneuron"
+       "   index  louvain            cell_type\n",
+       "0      0       13   Excitatory layer 3\n",
+       "1      1        3  Excitatory layer II\n",
+       "2      2        3  Excitatory layer II\n",
+       "3      3        7          Interneuron\n",
+       "4      4        6   Excitatory layer 4"
       ],
       "text/html": [
        "<div>\n",
@@ -316,7 +316,6 @@
        "      <th>index</th>\n",
        "      <th>louvain</th>\n",
        "      <th>cell_type</th>\n",
-       "      <th>benchmark_label</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -325,55 +324,50 @@
        "      <td>0</td>\n",
        "      <td>13</td>\n",
        "      <td>Excitatory layer 3</td>\n",
-       "      <td>eneuron</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>Excitatory layer II</td>\n",
-       "      <td>eneuron</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
        "      <td>Excitatory layer II</td>\n",
-       "      <td>eneuron</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>7</td>\n",
        "      <td>Interneuron</td>\n",
-       "      <td>ineuron</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
        "      <td>6</td>\n",
        "      <td>Excitatory layer 4</td>\n",
-       "      <td>eneuron</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 114
+   "execution_count": 8
   },
   {
    "cell_type": "code",
    "id": "31fc6c1472b540fb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-27T09:52:44.503043Z",
-     "start_time": "2024-11-27T09:52:44.456019Z"
+     "end_time": "2024-11-27T10:32:31.803936Z",
+     "start_time": "2024-11-27T10:32:31.758935Z"
     }
    },
    "source": [
@@ -609,20 +603,20 @@
        "</div>"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 103
+   "execution_count": 9
   },
   {
    "cell_type": "code",
    "id": "5c3e2a99c412f4dd",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-27T09:52:44.519082Z",
-     "start_time": "2024-11-27T09:52:44.504018Z"
+     "end_time": "2024-11-27T10:32:31.819958Z",
+     "start_time": "2024-11-27T10:32:31.805935Z"
     }
    },
    "source": [
@@ -656,15 +650,15 @@
      ]
     }
    ],
-   "execution_count": 104
+   "execution_count": 10
   },
   {
    "cell_type": "code",
    "id": "f03aec51e7d68859",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-27T09:52:44.550590Z",
-     "start_time": "2024-11-27T09:52:44.521055Z"
+     "end_time": "2024-11-27T10:32:31.851463Z",
+     "start_time": "2024-11-27T10:32:31.820941Z"
     }
    },
    "source": [
@@ -768,15 +762,15 @@
      ]
     }
    ],
-   "execution_count": 105
+   "execution_count": 11
   },
   {
    "cell_type": "code",
    "id": "15a61585ac811399",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-27T09:52:44.598591Z",
-     "start_time": "2024-11-27T09:52:44.551570Z"
+     "end_time": "2024-11-27T10:32:31.899468Z",
+     "start_time": "2024-11-27T10:32:31.852449Z"
     }
    },
    "source": [
@@ -972,18 +966,18 @@
        "</div>"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 106
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-27T09:52:47.307997Z",
-     "start_time": "2024-11-27T09:52:44.599569Z"
+     "end_time": "2024-11-27T10:32:34.693801Z",
+     "start_time": "2024-11-27T10:32:31.901448Z"
     }
    },
    "cell_type": "code",
@@ -1047,15 +1041,15 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 107
+   "execution_count": 13
   },
   {
    "cell_type": "code",
    "id": "ac098e4ff6c09eb8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-27T09:52:48.195808Z",
-     "start_time": "2024-11-27T09:52:47.308990Z"
+     "end_time": "2024-11-27T10:32:35.683506Z",
+     "start_time": "2024-11-27T10:32:34.695785Z"
     }
    },
    "source": [
@@ -1100,15 +1094,15 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 108
+   "execution_count": 14
   },
   {
    "cell_type": "code",
    "id": "43ebbf3bd6050eb5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-27T09:52:49.030616Z",
-     "start_time": "2024-11-27T09:52:48.196696Z"
+     "end_time": "2024-11-27T10:32:36.520194Z",
+     "start_time": "2024-11-27T10:32:35.684507Z"
     }
    },
    "source": [
@@ -1131,13 +1125,13 @@
      ]
     }
    ],
-   "execution_count": 109
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-27T09:52:49.046473Z",
-     "start_time": "2024-11-27T09:52:49.031616Z"
+     "end_time": "2024-11-27T10:32:36.536134Z",
+     "start_time": "2024-11-27T10:32:36.520957Z"
     }
    },
    "cell_type": "code",
@@ -1152,13 +1146,13 @@
    ],
    "id": "682951d8a15a3da",
    "outputs": [],
-   "execution_count": 110
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-27T09:52:49.061631Z",
-     "start_time": "2024-11-27T09:52:49.047457Z"
+     "end_time": "2024-11-27T10:32:36.552067Z",
+     "start_time": "2024-11-27T10:32:36.537185Z"
     }
    },
    "cell_type": "code",
@@ -1181,13 +1175,13 @@
    ],
    "id": "f39479cd9ec4eea4",
    "outputs": [],
-   "execution_count": 111
+   "execution_count": 17
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-27T09:52:49.077630Z",
-     "start_time": "2024-11-27T09:52:49.062630Z"
+     "end_time": "2024-11-27T10:32:36.567202Z",
+     "start_time": "2024-11-27T10:32:36.553067Z"
     }
    },
    "cell_type": "code",
@@ -1203,15 +1197,15 @@
    ],
    "id": "ebdedb99b0330958",
    "outputs": [],
-   "execution_count": 112
+   "execution_count": 18
   },
   {
    "cell_type": "code",
    "id": "7e01877e3e6f419c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-27T09:52:50.202390Z",
-     "start_time": "2024-11-27T09:52:49.078630Z"
+     "end_time": "2024-11-27T10:32:37.772436Z",
+     "start_time": "2024-11-27T10:32:36.568067Z"
     }
    },
    "source": [
@@ -1231,20 +1225,20 @@
     "st_counts.to_csv(f'{seqFish_dir}/st_counts.csv', index=True, header=True)"
    ],
    "outputs": [],
-   "execution_count": 113
+   "execution_count": 19
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-27T09:52:50.218342Z",
-     "start_time": "2024-11-27T09:52:50.203293Z"
+     "end_time": "2024-11-27T10:32:37.787458Z",
+     "start_time": "2024-11-27T10:32:37.773437Z"
     }
    },
    "cell_type": "code",
    "source": "",
    "id": "5891ebcb14d2e8c4",
    "outputs": [],
-   "execution_count": 113
+   "execution_count": 19
   }
  ],
  "metadata": {
