--- a/scripts/Tangram/Tangram.ipynb
+++ b/scripts/Tangram/Tangram.ipynb
@@ -1,6 +1,39 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "import os\n",
+    "\n",
+    "def find_and_set_directory(directory_name):\n",
+    "    # Start with the current working directory\n",
+    "    current_path = os.getcwd()\n",
+    "    \n",
+    "    # Keep moving up the directory hierarchy until we reach the root directory\n",
+    "    while current_path != os.path.dirname(current_path):  # The loop will terminate at the root directory\n",
+    "        if os.path.basename(current_path) == directory_name:\n",
+    "            # If the current directory name matches our target, set it as the cwd\n",
+    "            os.chdir(current_path)\n",
+    "            print(f\"Changed working directory to: {current_path}\")\n",
+    "            return\n",
+    "        # Move up one directory level\n",
+    "        current_path = os.path.dirname(current_path)\n",
+    "    \n",
+    "    print(\"Target directory not found.\")\n",
+    "    return\n",
+    "\n",
+    "# Define the target directory name\n",
+    "target_directory = 'SpatialDeconBenchmark'\n",
+    "\n",
+    "# Call the function\n",
+    "find_and_set_directory(target_directory)"
+   ],
+   "id": "d9c934f5893f9314"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-27T04:38:25.232401Z",
@@ -10,10 +43,10 @@
    "cell_type": "code",
    "source": [
     "# Define the directories\n",
-    "seqfish_dir = '../data/seqFISH'\n",
-    "visium_dir = '../data/Visium'\n",
-    "data_dir = '../data/methods/Tangram'\n",
-    "results_dir = '../results'\n",
+    "seqfish_dir = os.getcwd() + '/data/seqFISH'\n",
+    "visium_dir = os.getcwd() + '/data/Visium'\n",
+    "data_dir = os.getcwd() + '/data/methods/Tangram'\n",
+    "results_dir = os.getcwd() + '/results'\n",
     "\n",
     "seqfish_sc_file = f'{data_dir}/seqFISH_sc.h5ad'\n",
     "seqfish_st_file = f'{data_dir}/seqFISH_st.h5ad'\n",
